--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@
     + Debug messages for JoinMessage mod for when players input is ignored.
     + Binding/unbinding will trigger serialization
     + Bind option accepts input over 1 character now
+    + Added name check command (.namecheck <player name>)
 2.2.1-beta
     + Fixed name history order
     + Added wait for player connect and disconnect event triggers
