--- a/changelog.txt
+++ b/changelog.txt
@@ -16,7 +16,7 @@
         + Added ExtraTab
         + Safewalk works for riding entities
         + NoTotem added to AntiOverlay
-        + AntiAFK can be silent, and can be set to be only be activated when no key presses have been detected.
+        + AntiAFK can be silent, and can be set to be only be activated when no key presses have been detected, allowing it to be used without any gameplay interference.
 2.5.0
     [fr1kin]
         + Fixed issue with ModLoader not finding mods because of bug in guava
